html_css/css/main.css
*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  font-family: 'Lato', sans-serif;
  background-color: rgba(255, 255, 254, 1.0);
  color: rgba(30, 35, 35, 1.0);
  padding: 0;
  margin: auto;
  line-height: 1.5rem;
}

.products figcaption {
  text-align: center;
}

.products figure{
  display: inline-block;
  margin: 1.0rem;
}

header img {
  padding: 0 15%;
}

#content {
  padding: 0 15%;
  border: 0;
}

#game-content {
    padding: 0 15%;
    border: 0;
    text-align: center;
    margin-top: 2em;
  }

#game-content p {
  margin: 0;
}

.banner {
  width: 60%;
  margin-top: 2em;
}

img {
  width: auto;
  height: auto;
  max-width: 100%;
}

p.Oswald-pre {
  font-family: 'Oswald', sans-serif;
  font-size: 1.2rem;
}

ul {
  list-style: none;
  text-decoration: none;
}

section {
  margin: 1em 0;
  padding: 0.5em 0;
}

section h1 {
  font-weight: bold;
  font-family: "Oswald";
  font-size: 1.8rem;
  margin: 1em 0;
}

section h2 {
  font-size: 1.45rem;
}

section h3 {
  font-weight: normal;
  margin-bottom: 0.5em;
}

section h1 b, section h2 b, section h3 b {
  font-family: "Lato";
  font-size: 1.0rem;
  font-weight: normal;
  color: rgba(135, 135, 135, 1.0);
}

section code {
  display: inline-block;
  background-color: rgba(230, 230, 230, 1.0);
  padding: 0.5em 0.75em;
}

b.archive a{
  float:right;
  font-size: 120%;
}

/* Using a 5 column grid */
.grid-col-1 {
  width: 20%;
}

.grid-col-2 {
  width: 40%;
}

.grid-col-3 {
  width: 60%;
}

.grid-col-4 {
  width: 80%;
}

.grid-col-5 {
  width: 100%;
}

[class^=grid-col-] {
  display: inline-block;
  float:left;
}

[class^=grid-col-] p {
  padding: 0 1.0rem;
  margin: 0;
}

.grid-50:after, .grid-25:after {
  display:block;
  content:"";
  clear: both;
}

/* Links */

section a {
  color: rgba(255, 110, 0, 1.0);
}

section a:hover, nav ul li a:hover {
  color: rgba(30, 35, 35, 1.0);
  transition: color 0.2s ease-in-out;
}

/* buttons */

#buttons li {
  display: inline-block;
  padding: 1.0rem;
}

a.btn {
  display: inline-block;
  padding: 1.0rem;
  border-radius: 0.25em;
  text-decoration: none;
  color: rgba(255, 255, 255, 1.0);
  -webkit-transition: background-color 0.5s ease-out;
  transition: color 0.5s ease-out;
  transition: background-color 0.5s ease-out;

}

a.submit {
  background-color: rgba(50, 169, 247, 1.0);
}

a.submit:hover, a.submit2:hover {
  color: rgba(30, 35, 35, 1.0);
  background-color: rgba(206, 206, 206, 1.0);
}

a.cancel {
  color: rgba(135, 135, 135, 1.0);
  background-color: transparent;
}

a.cancel:hover {
  color: rgba(0, 0, 0, 1.0);
}

a.submit2 {
  background-color: rgba(76, 216, 90, 1.0);
}

a.remove {
  background-color: rgba(200, 40, 40, 1.0);
}

a.remove:hover {
  background-color: rgba(0, 0, 0, 1.0);
  color: rgba(200, 40, 40, 1.0);
}

/* Navigation */
#topnav, #cartnav {
  margin: 0 15%;
  padding: 0;
  background-color: rgba(60, 60, 60, 1.0);
}

#footer {
  margin: 0;
  padding: 0 15%;
  width: 100%;
}

#topnav {
  text-align: center;
}

#cartnav {
  text-align: right;
  margin-top: 0.5rem;
  padding: 0 0.5rem;
}

#cartnav .nav-item {
  display: inline-block;
  padding: 0 0.2rem;
}

#footer ul {
  text-align: right;
}

#topnav .nav-item {
  display: inline-block;
  font-family: 'Oswald', sans-serif;
  font-size: 1.4rem;
  width: 18%;
  padding: 1.0rem 0;
  background-color: rgba(60, 60, 60, 1.0);
}

#topnav .nav-item:hover, #cartnav .nav-item:hover {
  color: rgba(255, 110, 0, 1.0);
}

#guide-nav ul {
  display: inline-block;
  margin: auto;
  width: auto;
}

#topnav a, #cartnav a, #cartnav .nav-item {
  color: rgba(255, 255, 255, 1.0);
  transition: color 0.2s ease-in-out;
  text-decoration: none;
}

#topnav a:hover, #cartnav a:hover {
  color: rgba(255, 110, 0, 1.0);
}

nav ul li a {
  color: rgba(255, 110, 0, 1.0);
  text-decoration: none;
}

#footer .meta li {
  font-size: 0.7rem;
  display: inline-block;
  padding: 0 1.2%;
  float: left;
}

/* Color blocks */
.colorblock {
  color: rgb(255, 255, 255);
  display: inline-block;
  border-radius: 1.0rem;
  width: 12.0rem;
  height: 4.0rem;
  padding: 2.0rem;
  margin: 1.0rem;
  text-align: center;
  border: 1px solid rgba(30, 35, 35, 0.4);
}

.colorblock:hover {
  border-color: rgba(30, 35, 35, 1.0);
  transition: border 0.4s ease-in-out;
}

.colorblock span {
  font-size: 1.0rem;
}

.colorgrey {
  background-color: rgba(255, 255, 254, 1.0);
  color: rgba(30, 35, 35, 1.0);
}

.colordark {
  background-color: rgba(30, 35, 35, 1.0);
}

.colorwhite {
  background-color: rgba(0, 0, 0, 1.0);
}

.colorsub {
  background-color: rgba(135, 135, 135, 1.0);
}

.colororange {
  background-color: rgba(255, 110, 0, 1.0);
}

.colorblue {
  background-color: rgba(50, 169, 247, 1.0);
}

.colorgreen {
  background-color: rgba(100, 200, 40, 1.0);
}

.colornavgrey {
  background-color: rgba(60, 60, 60, 1.0);
}

/* Forms */

.input-wrapper {
  padding: 0.5rem;
}

input {
  padding: 0.5rem 3.0rem 0.5rem 0.5rem;
}

input.form-search {
  border-radius: 1.0rem;
  padding: 0.5rem 3.0rem 0.5rem 0.8rem;
}

@media screen and (max-width: 600px) {
  body {
    font-size: 0.8rem;
  }

  #topnav {
    padding-left: 0
  }

  #topnav .nav-item {
    font-size: 1.0rem;
    width: 100%;
    line-height: 0.8rem;
  }

  #content, #game-content {
    padding: 0;
    margin: 0;
  }

  #content img {
    width: auto;
  }

  #footer .meta li {
    text-align: justify;
    display: inline-block;
    padding: 0 0.4rem;
  }

  [class^=grid-col-] {
    display:block;
    width: 100%;
  }

  #game-content .grid-50 {
  margin: 0;
  padding: 0;
  }
}

@media screen and (max-width: 800px) {
  #content, #topnav, header img {
    padding: 0;
    margin: 0;
  }
}

@media screen and (max-width: 1180) {
  #content {
    padding: 5%;
    margin: 0;
  }
@media screen and (max-width: 1920) {
  #content {
    padding: 15%;
    margin: 0;
  }

  #topnav {
    margin: 0 25%;
  }
}

